--- a/my-portfolio/views/about.ejs
+++ b/my-portfolio/views/about.ejs
@@ -16,10 +16,16 @@
       </div>
       <!-- Right Column for Text -->
       <div class="col-md-6 d-flex flex-column justify-content-center">
-        <h2 class="display-4"><span class="text-red">About</span> Me</h2>
+        <h2 class="display-4"><span class="text-red">ABOUT</span> ME</h2>
         <p>I am a second-year Networking and IT student with a passion for technology and innovation. Outside of my studies, I have a fascination with watches, appreciating their craftsmanship and precision. I thrive on challenges and love turning ideas into reality.</p>
         <a href="/videos/introvideo.mp4" target="_blank" class="btn btn-custom"><i class="fa-brands fa-youtube"></i> Watch Video</a>
       </div>
+    </div>
+
+    <!-- Navigation buttons to other pages -->
+    <div class="nav-buttons d-flex justify-content-between mt-4">
+      <a href="/" class="btn btn-secondary nav-button"><i class="fa-solid fa-arrow-left"></i> Previous Page</a>
+      <a href="/projects" class="btn btn-secondary nav-button">Next <i class="fa-solid fa-arrow-right"></i></a>
     </div>
   </div>
 
