--- a/my-portfolio/views/partials/header.ejs
+++ b/my-portfolio/views/partials/header.ejs
@@ -1,7 +1,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/"> <i class="fa-sharp-duotone fa-solid fa-user"></i>  D.S</a>
+  <a class="navbar-brand" href="/">  D.S</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
     <span class="navbar-toggler-icon"></span>
   </button>
